--- a/css/lk.css
+++ b/css/lk.css
@@ -267,17 +267,21 @@ footer {
 :root {
   scrollbar-width: thin; }
 
+@media (max-width: 991px) {
+  table tbody {
+    font-size: 24px; } }
+
 .lk-outer {
   min-height: 100vh;
   background-image: linear-gradient(270deg, var(--bg-color-2) -0.9%, var(--bg-color-1) 108.03%); }
   .lk-outer .lk-inner {
     display: grid;
-    grid-template: "head head head head head" 120px "profile details details details panel" fit-content(8ch) "profile details details details panel" fit-content(8ch) "info details details details panel" 60px/500px 1.25fr 1.25fr 0.5fr minmax(100px, 0.25fr);
+    grid-template: "head head head head head" 120px "profile details details details panel" fit-content(8ch) "profile details details details panel" fit-content(8ch) "info details details details ." 60px/500px 1.25fr 1.25fr 0.5fr minmax(100px, 0.25fr);
     grid-gap: 20px;
     margin: 10% auto 10%; }
     @media (max-width: 991px) {
       .lk-outer .lk-inner {
-        grid-template: "head head head head head" fit-content(8ch) "profile profile profile profile panel" fit-content(8ch) "profile profile profile profile panel" fit-content(8ch) "profile profile profile profile ." fit-content(8ch) "info info info info ." fit-content(8ch) "details details details details ." fit-content(8ch)/2fr 1.25fr 1.25fr 0.5fr minmax(100px, 0.25fr);
+        grid-template: "head head head head head" fit-content(8ch) "profile profile profile profile panel" fit-content(8ch) "profile profile profile profile panel" fit-content(8ch) "profile profile profile profile panel" fit-content(8ch) "info info info info ." fit-content(8ch) "details details details details ." fit-content(8ch)/2fr 1.25fr 1.25fr 0.5fr minmax(100px, 0.25fr);
         grid-gap: 15px; } }
 
 .grid-card {
@@ -388,39 +392,67 @@ footer {
     width: 100%;
     font-size: 0.75rem;
     font-family: 'Nunito', sans-serif; }
+    @media (max-width: 991px) {
+      .info table tbody {
+        font-size: 1rem; } }
 
 .details {
   flex-direction: column;
   grid-area: details;
-  background: linear-gradient(216.68deg, #fff 70%, rgba(255, 255, 255, 0) 100%), url(../images/autoban.jpg) -100px -50px no-repeat;
+  background: linear-gradient(216.68deg, #fff 70%, rgba(255, 255, 255, 0) 100%), url(../images/autoban.jpg) -100px -100px no-repeat;
   background-size: 1000px;
   font-family: 'Nunito', sans-serif; }
+  @media (max-width: 1199px) {
+    .details {
+      background: linear-gradient(216.68deg, #fff 70%, rgba(255, 255, 255, 0) 100%), url(../images/autoban.jpg) -100px -320px no-repeat; } }
   .details .sec-wrapper {
     display: flex;
     justify-content: space-between;
     margin-top: 40px;
-    margin-left: 40px; }
+    margin-left: 20px; }
+    @media (max-width: 1199px) {
+      .details .sec-wrapper {
+        margin-left: 0; } }
     .details .sec-wrapper h3 {
       text-transform: uppercase; }
+      @media (max-width: 991px) {
+        .details .sec-wrapper h3 {
+          font-size: 1.4rem; } }
     .details .sec-wrapper .sec {
       display: flex;
       flex-direction: column; }
     .details .sec-wrapper .sec-1 {
-      width: 30%; }
+      width: 40%;
+      min-width: 200px; }
+      @media (max-width: 1199px) {
+        .details .sec-wrapper .sec-1 {
+          width: 80%; } }
     .details .sec-wrapper .sec-2 {
-      width: 45%; }
+      width: 40%;
+      min-width: 200px; }
+      @media (max-width: 1199px) {
+        .details .sec-wrapper .sec-2 {
+          width: 80%;
+          margin-top: 40px; } }
+    @media (max-width: 1199px) {
+      .details .sec-wrapper {
+        flex-direction: column; } }
   .details table {
     width: 100%;
     margin-top: 20px;
     text-align: left; }
     .details table td {
-      padding: 7.5px; }
+      padding: 7.5px;
+      text-align: right; }
     .details table .money::after {
       content: " $"; }
     .details table .accent {
       font-size: 22px;
       font-weight: bold;
       color: #d2333a; }
+      @media (max-width: 991px) {
+        .details table .accent {
+          font-size: 32px; } }
   .details .cars-wrapper {
     flex-grow: 1;
     overflow: hidden; }
@@ -459,6 +491,9 @@ footer {
       background: black;
       border-bottom-right-radius: 10px;
       border-bottom-left-radius: 10px; }
+      @media (max-width: 991px) {
+        .details .cars .car-price {
+          font-size: 1rem; } }
     .details .cars .car-price::after {
       content: " $"; }
   .details .replenish-button {
@@ -475,9 +510,34 @@ footer {
   .details h2 {
     font-size: 26px;
     text-transform: uppercase; }
+    @media (max-width: 991px) {
+      .details h2 {
+        font-size: 28px; } }
   @media (max-width: 991px) {
     .details {
       background: linear-gradient(216.68deg, #fff 70%, rgba(255, 255, 255, 0) 100%), url(../images/autoban.jpg) -100px -400px no-repeat; } }
 
 .characters {
-  grid-area: panel; }
+  display: flex;
+  flex-direction: column;
+  grid-area: panel;
+  justify-content: space-evenly;
+  max-height: 250px;
+  padding: 20px 0; }
+  .characters input {
+    display: none; }
+  .characters label {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 64px;
+    background: var(--bg-color-light);
+    transition: background-color 0.5s ease-in-out; }
+    .characters label .char-img {
+      width: 52px; }
+  .characters input:checked ~ label {
+    background: #7bbcff; }
+    .characters input:checked ~ label .char-img {
+      border: 4px solid var(--red);
+      border-radius: 50%; }
