--- a/css/lk.css
+++ b/css/lk.css
@@ -83,6 +83,7 @@ header {
         header nav .navigation li a {
           text-decoration: none; }
     header nav .burger {
+      --color: #4e4e4e;
       display: none;
       align-self: center;
       width: 36px;
@@ -92,7 +93,7 @@ header {
       cursor: pointer;
       background: none;
       border: 0;
-      border-bottom: 4px solid #4e4e4e;
+      border-bottom: 4px solid var(--color);
       outline: 0;
       transition: border-bottom 1s ease-in-out; }
       header nav .burger::-moz-focus-inner {
@@ -103,14 +104,14 @@ header {
         width: 100%;
         margin-bottom: 5px;
         content: "";
-        border-bottom: 4px solid #4e4e4e;
+        border-bottom: 4px solid var(--color);
         transition: transform 0.5s ease-in-out; }
       header nav .burger::after {
         display: block;
         width: 100%;
         margin-bottom: 5px;
         content: "";
-        border-bottom: 4px solid #4e4e4e;
+        border-bottom: 4px solid var(--color);
         transition: transform 0.5s ease-in-out; }
       @media (max-width: 991px) {
         header nav .burger {
@@ -278,7 +279,7 @@ footer {
     display: grid;
     grid-template: "head head head head head" 120px "profile details details details panel" fit-content(8ch) "profile details details details panel" fit-content(8ch) "info details details details ." 60px/500px 1.25fr 1.25fr 0.5fr minmax(100px, 0.25fr);
     grid-gap: 20px;
-    margin: 10% auto 10%; }
+    margin: 10% auto 100px; }
     @media (max-width: 991px) {
       .lk-outer .lk-inner {
         grid-template: "head head head head head" fit-content(8ch) "profile profile profile profile panel" fit-content(8ch) "profile profile profile profile panel" fit-content(8ch) "profile profile profile profile panel" fit-content(8ch) "info info info info ." fit-content(8ch) "details details details details ." fit-content(8ch)/2fr 1.25fr 1.25fr 0.5fr minmax(100px, 0.25fr);
